create basic page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
 
     </header>
-    <div>
+    <div class="search_area">
         <script>
             let selectText = document.getElementById("select");
             selectText = selectText.options[selectText.selectedIndex].text;
