--- a/index.html
+++ b/index.html
@@ -27,13 +27,24 @@
                 <p style="font-size: 50px; margin-bottom: 10px;">Naver Movie Search</p>
             </div>
             <div class="search_div">
-                <select id="select">
+                <select class="select">
                     <option>title</option>
-                    <option>scope</option>
+                    <option>genre</option>
                     <option>director</option>
+                    <option>country</option>
+                </select>
+                <select class="select" name="order">
+                    <option value="1">정렬순</option>
+                    <option value="1">제목(오름차순)</option>
+                    <option value="2">제목(내림차순)</option>
+                    <option value="3">개봉일(오래된순)</option>
+                    <option value="4">개봉일(최신순)</option>
+                    <option value="5">상영시간(오름차순)</option>
+                    <option value="6">상영시간(내림차순)</option>
                 </select>
                 <input type="text" name="text" id="search"/>
                 <input type="submit" name="submit" value="검색" id="search_button"/>
+                
             </div>
         </form>
     </div>
