--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     </header>
     <div class="search_area">
-        <script>
+        <!-- <script>
             let selectText = document.getElementById("select");
             selectText = selectText.options[selectText.selectedIndex].text;
             
@@ -21,7 +21,7 @@
                 fm.submit();
                 return true;
             }
-        </script>
+        </script> -->
         <form method="get" action="/search" class="search_form">
             <div>
                 <p style="font-size: 50px; margin-bottom: 10px;">Naver Movie Search</p>
